GNOME Bugzilla – Bug 758609
Regression with firefox dropdown menu position
Last modified: 2015-11-30 13:34:54 UTC
Summary: gtk+ 3.19.x introduced a regression with firefox dropdown menu positionning. How reproducible: 100% Steps to reproduce: 1. Run firefox and tart typing a url so that the url dropdown menu appears. 2. Move firefox to another location 3. Type in the url bar again Actual result: The dropdown menu appears where it wa before firefox was moved Expected result: The dropdown menu appears at the correct location matching where the window is now. Additional data: A git bisect came out with commit 6866d1c as the first bad commit.
There are actually two regressions. 1. The one described in comment 0 This is caused by commit 6866d1c Can be fixed with --- a/gtk/gtkwindow.c +++ b/gtk/gtkwindow.c @@ -5565,6 +5565,7 @@ gtk_window_move (GtkWindow *window, else { /* Save this position to apply on mapping */ + gtk_widget_queue_resize (widget); info->initial_x = x; info->initial_y = y; info->initial_pos_set = TRUE; as suggested by Company on irc. 2. A regression that shows the dropdown menu in (0,0) Step to reproduce 1. Run firefox and start typing a url so that the url dropdown menu appears. 2. Dismiss the menu with "Escape" 3. Type in the url bar again Actual result The dropdown menu now shows in (0,0) A new git bisect gives commit 1f01b8d as the first bad commit.
Created attachment 316293 [details] [review] gtkwindow: fix regression with firefox dropdown menu This is a patch based on a couple of fixes Company (Benjamin) posted on irc that fix the issue reported here.
Created attachment 316310 [details] [review] gtkwindow: fix regression with firefox dropdown menu Updated patch as Benjamin already pushed a part of this patch.
Review of attachment 316310 [details] [review]: ok
attachment pushed a commit f30b4ba gtkwindow: fix regression with firefox dropdown menu